Service layout issues (#125)
* fixed checkbox column size

* fixed checkbox column size

* fixed serverside dropdown search issue

* added customcaptions

* fixed warning

* added custom captions and fixed texts

* fixed service layout issues

* added expand service layout default

* added autoexpand only at firstRender

* removed taskdetailspopup, fixed stage tasks reorder issue

* fixed autoexpand after dropdown change

* fixed issue

* fixed scroll issue

* fixed pos value issue

* fixed date format

* removed null value

* fixed taskquestion id highlight issue

* added missing properties

--- a/src/components/Modules/ServiceLayoutUI/style.css
+++ b/src/components/Modules/ServiceLayoutUI/style.css
@@ -16,7 +16,7 @@
 
 .row__questions__item {
 	margin: 0 15px;
-	color: gray;
+	color: #534a4a;
 	flex: 1;
 }
 
